# Repositorio_Hoja_CC

ArkOs1.0/: MotorZBuffer.java
ArkOs2.0/: Motor3D.java  Visor3D.java
ArkOs3.0/: Fragmentos.java
ArkOs4.0/: OperacionesImagenes.java
ArkOs5.0/: FiltroDiaNoche.java
BRNSP/: CMakeLists.txt  fractal-mpi.cpp  fractal-mpi.h  fractal-omp.cpp  fractal-omp.h  fractal-serial.cpp  fractal-serial.h  fractal-simd.cpp  fractal-simd.h  main.cpp  palette.cpp
CBRNSP/: CMakeLists.txt  fractal-cuda.cu  main.cpp
CNTWM/: CMakeLists.txt  main.cpp  palette.h
Dc/: DC_1.docx
Dc/pw_api_auth_u4_p9_kp/: README.md
Dc/pw_api_auth_u4_p9_kp/src/main/docker/: Dockerfile.jvm  Dockerfile.native
Dc/pw_api_auth_u4_p9_kp/src/main/java/uce/edu/web/api/auth/application/: AuthService.java
Dc/pw_api_auth_u4_p9_kp/src/main/java/uce/edu/web/api/auth/infraestructure/: UserSeeder.java
Dc/pw_api_auth_u4_p9_kp/src/main/java/uce/edu/web/api/auth/interfaces/: AuthResource.java
Dc/pw_api_auth_u4_p9_kp/src/main/resources/: privateKey.pem
Dc/pw_api_u3_p9_kp/src/main/java/uce/edu/web/api/matricula/application/: CitaService.java  DoctorService.java  PacienteService.java
Dc/pw_api_u3_p9_kp/src/main/java/uce/edu/web/api/matricula/domain/: Cita.java  Doctor.java  Paciente.java
Dc/pw_api_u3_p9_kp/src/main/java/uce/edu/web/api/matricula/infraestructure/: CitaRepository.java  DoctorRepository.java  PacienteRepository.java
Dc/pw_api_u3_p9_kp/src/main/java/uce/edu/web/api/matricula/interfaces/: CitaResource.java  DoctorResource.java  PacienteResource.java
Dc/pw_u4_vue_kp/: package.json
Dc/pw_u4_vue_kp/src/: App.vue
Dc/pw_u4_vue_kp/src/clients/: Matriculaclient.js
Dc/pw_u4_vue_kp/src/components/: CitaAgendar.vue  CitaFormulario.vue  CitaLista.vue  DoctorCrear.vue  PacienteCrear.vue
Dc/pw_u4_vue_kp/src/router/: index.js
Dc/pw_u4_vue_kp/src/views/: CitaAgendarView.vue  DoctorCrearView.vue  PacienteCrearView.vue
Ejercicios_MPI_PruebaCC/: CMakeLists.txt  datos.txt  main.cpp  solver.cpp  solver.h
Ejercicios_MPI_Prueba_EJ2/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
Ejercicios_MPI_Prueba_MM/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
Irtks/: CMakeLists.txt  blur_cuda.cu  blur_cuda.cuh  blur_cuda_dummy.cpp  blur_omp.cpp  blur_omp.h  filter_cuda.cu  filter_cuda.cuh  filter_cuda_dummy.cpp  filter_omp.cpp  filter_omp.h  main_cuda.cpp  main_omp.cpp
NTWM/: CMakeLists.txt  fractal-cuda.cu  fractal-mpi.cpp  fractal-mpi.h  fractal-omp.cpp  fractal-omp.h  fractal-serial.cpp  fractal-serial.h  fractal-simd.cpp  fractal-simd.h  main.cpp
SM/: SM_1.docx
SM/pw_api_auth_u4_p9_kp/: pom.xml
SM/pw_api_auth_u4_p9_kp/src/main/docker/: Dockerfile.legacy-jar
SM/pw_api_auth_u4_p9_kp/src/main/java/uce/edu/web/api/auth/application/: AuthService.java
SM/pw_api_auth_u4_p9_kp/src/main/java/uce/edu/web/api/auth/interfaces/: AuthResource.java
SM/pw_api_u3_p9_kp/: pom.xml
SM/pw_api_u3_p9_kp/src/main/java/uce/edu/web/api/matricula/: MyEntity.java
SM/pw_api_u3_p9_kp/src/main/java/uce/edu/web/api/matricula/application/: EstudianteService.java
SM/pw_api_u3_p9_kp/src/main/java/uce/edu/web/api/matricula/domain/: Estudiante.java
SM/pw_api_u3_p9_kp/src/main/java/uce/edu/web/api/matricula/infrastructure/: EstudianteRepository.java
SM/pw_api_u3_p9_kp/src/main/java/uce/edu/web/api/matricula/interfaces/: EstudianteResource.java
SM/pw_api_u3_p9_kp/src/main/resources/: application.properties
SM/pw_u4_vue_kp/src/: App.vue
SM/pw_u4_vue_kp/src/clients/: AuthClient.js  InscripcionClient.js
SM/pw_u4_vue_kp/src/components/: EstudianteForm.vue  EstudianteList.vue  GenerarToken.vue  NotificationContainer.vue
SM/pw_u4_vue_kp/src/router/: index.js
SM/pw_u4_vue_kp/src/views/: GenerarTokenView.vue  GuardarEstudianteView.vue
TX/: TX_1.docx
TX/pw_api_auth_u4_p9_kp/src/main/docker/: Dockerfile.native-micro
TX/pw_api_auth_u4_p9_kp/src/main/java/uce/edu/web/api/auth/domain/: Usuario.java
TX/pw_api_auth_u4_p9_kp/src/main/java/uce/edu/web/api/auth/infraestructure/: UsuarioRepository.java
TX/pw_api_auth_u4_p9_kp/src/main/resources/: application.properties  import.sql
TX/pw_api_u3_p9_kp/src/main/java/uce/edu/web/api/matricula/application/: ProductoService.java  VentaService.java
TX/pw_u4_vue_kp/src/: App.vue
TX/pw_u4_vue_kp/src/clients/: FacturacionClient.js
TX/pw_u4_vue_kp/src/components/: Login.vue  ProductoIngresar.vue  VentaRealizar.vue
TX/pw_u4_vue_kp/src/router/: index.js
TX/pw_u4_vue_kp/src/views/: ProductoIngresarView.vue  VentaRealizarView.vue
(+17 files in other folders)
